--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>Work in progress!</h1>
+  <h1>Work in progress!!!</h1>
   </div>
 
 <router-outlet></router-outlet>
