--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>Work in progress!!!</h1>
+  </div> -->
+
+  <div>
+    <app-search></app-search>
+  </div>
+    
+  
+  <div>
+    <a routerLink="/artists" routerLinkActive="active">Artists</a>
+    <a routerLink="/albums" routerLinkActive="active">Albums</a>
+    <a routerLink="/tracks" routerLinkActive="active">Tracks</a>
   </div>
 
 <router-outlet></router-outlet>
