--- a/src/app/Components/artists/artists.component.html
+++ b/src/app/Components/artists/artists.component.html
@@ -1,18 +1,22 @@
 <div class="custom" *ngIf="artist">
-  <div *ngIf="artist.images.length > 0">
-    <img src="{{artist.images[0].url}}" alt="{{artist.name}}">
+  <div class="row">
+    <div class="card h-100" *ngIf="artist.images.length > 0">
+      <img
+        src="{{ artist.images[0].url }}"
+        style="height: 300px; width: 300px"
+      />
+      <div class="card-body">
+        <h6 class="card-title">
+          <h5>Artist Name: {{ artist.name }}</h5>
+        </h6>
+        <ul class="card-text">
+          <li>Followers: {{ artist.followers.total }}</li>
+          <li>Popularity: {{ artist.popularity }}</li>
+          <li>Genres: {{ artist.genres }}</li>
+        </ul>
+      </div>
+    </div>
   </div>
 
-  <div class="content">
-    <h4 class="ui centered block medium header">{{artist.name}}</h4>
-    <div class="ui blue label">Followers: {{artist.followers.total}}</div>
-    <div class="ui green label">Popularity: {{artist.popularity}}</div>
-    <div class="ui label" *ngFor="let genre of artist.genres">{{genre}}</div>
-
-
-  </div>
-
-
-  <input type="button" value="Back to Search" [routerLink]="['/']">
-
+  <div><input type="button" value="Back to Search" [routerLink]="['/']" /></div>
 </div>
